# voice-bridge

./: .env.example  .gitignore  CONTRIBUTING.md  HANDOFF.md  LAUNCH-CHECKLIST.md  README.md  ROADMAP.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
claude-plugin/: .mcp.json  LICENSE  README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: ensure-installed.sh  hooks.json  stop-speak.sh
claude-plugin/skills/speak/: SKILL.md
npm-package/: README.md  package.json
src/voice_bridge/: __init__.py  cli.py  config.py  engines.py  paths.py  setup_wizard.py  speak.py  state.py  text_filter.py
src/voice_bridge/integrations/: claude_hook.sh  claude_instructions.md
src/voice_bridge/mcp/: server.py
src/voice_bridge/tts/: __init__.py  audio_queue.py  base.py  edge_tts_engine.py  elevenlabs_engine.py  espeak_engine.py  kokoro_engine.py  macos_say.py  sentence_splitter.py
tests/: test_audio_queue.py  test_cli.py  test_config.py  test_engines.py  test_hook_extraction.py  test_mcp_server.py  test_paths.py  test_sentence_splitter.py  test_state.py  test_text_filter.py  test_tts.py
